[gd_scene load_steps=7 format=3 uid="uid://cse7es47kd3ij"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_j1qn0"]
[ext_resource type="Theme" uid="uid://cmnphk4dtgj2x" path="res://resources/font_theme.tres" id="2_ofnch"]
[ext_resource type="Texture2D" uid="uid://ctqopryol3ch8" path="res://resources/grabber.tres" id="2_xjpce"]
[ext_resource type="StyleBox" uid="uid://cfnkbyl44sapq" path="res://resources/button_outline.tres" id="3_mx5m2"]

[sub_resource type="Gradient" id="Gradient_alaag"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k8mi0"]
gradient = SubResource("Gradient_alaag")
width = 8
height = 8

[node name="PauseMenu" type="Node2D"]
process_mode = 3
z_index = 100
script = ExtResource("1_j1qn0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 192.0

[node name="BackgroundColor" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 2
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 0.956863)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -20.5
offset_right = 48.5
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ofnch")
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="ExitButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/ButtonsContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../../../VolumeContainer/VolumeSlider")
focus_next = NodePath("../PlayButton")
theme = ExtResource("2_ofnch")
theme_override_styles/focus = ExtResource("3_mx5m2")
text = " Exit "

[node name="PlayButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/ButtonsContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../../../VolumeContainer/VolumeSlider")
focus_previous = NodePath("../ExitButton")
theme = ExtResource("2_ofnch")
theme_override_styles/focus = ExtResource("3_mx5m2")
text = "Resume"

[node name="VolumeContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="VolumeLabel" type="Label" parent="CanvasLayer/Control/VolumeContainer"]
layout_mode = 2
theme = ExtResource("2_ofnch")
text = "Volume: 000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="CanvasLayer/Control/VolumeContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../VBoxContainer/ButtonsContainer/PlayButton")
theme_override_icons/grabber = ExtResource("2_xjpce")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_k8mi0")
theme_override_icons/grabber_disabled = ExtResource("2_xjpce")
theme_override_styles/slider = ExtResource("3_mx5m2")
theme_override_styles/grabber_area = ExtResource("3_mx5m2")
theme_override_styles/grabber_area_highlight = ExtResource("3_mx5m2")
max_value = 1.0
step = 0.05
scrollable = false

[node name="SpacerLabel" type="Label" parent="CanvasLayer/Control/VolumeContainer"]
layout_mode = 2

[node name="ControllerContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 78.0

[node name="Title" type="Label" parent="CanvasLayer/Control/ControllerContainer"]
layout_mode = 2
theme = ExtResource("2_ofnch")
text = "Controller"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="CanvasLayer/Control/ControllerContainer"]
layout_mode = 2
theme = ExtResource("2_ofnch")
theme_override_font_sizes/font_size = 4
text = "Move:      Joystick/D-Pad
Interact:               Y
Jump:                   A
Pause Menu:         START
Reset Room:          BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyboardContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 192.0
offset_right = 320.0
offset_bottom = 68.0

[node name="Title" type="Label" parent="CanvasLayer/Control/KeyboardContainer"]
layout_mode = 2
theme = ExtResource("2_ofnch")
text = "Keyboard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="CanvasLayer/Control/KeyboardContainer"]
layout_mode = 2
theme = ExtResource("2_ofnch")
theme_override_font_sizes/font_size = 4
text = "Move:                WASD
Interact:               F
Jump:               SPACE
Pause Menu:         Q/ESC
Reset Room:             R"
horizontal_alignment = 1
vertical_alignment = 1
